remove button type

--- a/order-summary-component/src/app/app.component.html
+++ b/order-summary-component/src/app/app.component.html
@@ -17,7 +17,7 @@
 				<span class="change">Change</span>
 			</div>
 
-			<button class="order--payment">Proceeed to Payment</button>
+			<button class="order--payment">Proceed to Payment</button>
 			<span class="order--cancel">Cancel Order</span>
 		</div>
 	</article>
